--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -26,6 +26,11 @@
       .padding(414px, r);
     }
   }
+
+  &-border {
+    border-top: 1px solid #E3E3E3;
+  }
+
   &-right {
     position: absolute;
     right: 0;
