--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -10,8 +10,7 @@
     &-pad {
       position: relative;
       z-index: 100;
-      width: 90%;
-      margin: auto;
+      margin: 0 30px;
     }
 
     &-tabs {
@@ -48,10 +47,14 @@
 
         &-left {
           background-image: url(//net.huanmusic.com/scanbar-c/tab_left.png);
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
         }
 
         &-right {
           background-image: url(//net.huanmusic.com/scanbar-c/tab_right.png);
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
         }
       }
 
@@ -149,7 +152,7 @@
     padding: 30px 26px;
 
     &-border {
-      border-bottom: #E3E3E3 solid 1px;
+      border-bottom: solid 1px rgba(227,227,227,.5);
     }
 
     &-image {
