--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -29,7 +29,13 @@
     background: #F2F2F2;
     margin-top: 22px;
     &-card {
-      width: 90%;
+      margin: 0 30px;
+      width: 100%;
+      .component-form {
+        .at-list__item {
+          padding-left: 10px !important;
+        }
+      }
     }
   }
   &-search {
