--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -47,12 +47,12 @@
 
   &-padding {
     // border-bottom: 1px solid @product-border-color;
-    .padding(30px, lr);
+    .padding(30px, l);
   }
 
   &-border {
-    border-bottom: 1px solid @product-border-color;
-    .padding(28px, b);
+    border-bottom: 1px solid rgba(227,227,227,.5);
+    // .padding(28px, b);
   }
 
   &-last {
@@ -81,7 +81,7 @@
 
   &-content {
     position: relative;
-    .flex(center, flex-start, row);
+    .flex(flex-start, flex-start, row);
     .padding(10px, tb);
     flex: 1;
 
@@ -139,9 +139,8 @@
     }
 
     &-detail {
-      .margin(10px, l);
-      .margin(10px, t);
-      height: 182px;
+      .margin(15px, l);
+      .padding(30px, r);
       display: flex;
       flex: 1;
       min-height: 150px;
@@ -156,6 +155,10 @@
         .margin(17px, t);
         display: flex;
         flex-direction: column;
+      }
+
+      &-pb {
+        .padding(28px, b);
       }
     }
 
@@ -174,8 +177,8 @@
 
   &-title {
     font-size: @product-title-font;
-    line-height: @product-title-font;
-    height: @product-title-font;
+    // line-height: @product-title-font;
+    // height: @product-title-font;
     color: @product-title-color;
     display: -webkit-box;
     overflow: hidden;
@@ -191,7 +194,7 @@
 
   &-tips {
     position: relative;
-    .margin(19px, t);
+    .margin(10px, t);
     font-size: 22px;
     height: 22px;
     line-height: 22px;
@@ -212,6 +215,7 @@
 
   &-activity {
     .flex(center, flex-start, row);
+    .margin(6px, t);
   }
 
   &-discount {
@@ -282,7 +286,7 @@
     // .margin(18px, t);
     font-size: 24px;
     line-height: 50px;
-    height: 50px;
+    // height: 50px;
     color: @product-normal-color;
   }
 
@@ -373,7 +377,7 @@
     &-touch {
       width: 80px;
       height: 80px;
-      .flex(center, flex-end);
+      .flex(center, center);
     }
 
     &-button {
