--- a/src/pages/index/component/index.less
+++ b/src/pages/index/component/index.less
@@ -244,6 +244,7 @@
         flex: 1;
         margin-top: 20px;
         margin-bottom: 30px;
+        height: 300px;
       }
 
       &-phone {
@@ -351,6 +352,10 @@
           }
         }
 
+        &-obtained {
+          color: rgba(255,137,59,.7)
+        }
+
         &-border {
           .padding(10px, lr);
           .flex(flex-end, center, row);
@@ -364,10 +369,13 @@
         flex: 1;
         flex-direction: row;
         align-items: center;
-        .padding(10px, tb);
+        // .padding(10px, tb);
+        .margin(15px, t);
 
         &-symbol {
-          width: 56px;
+          // width: 56px;
+          .padding(8px, lr);
+          .padding(3px, tb);
           height: 26px;
           .flex(center, center, row);
           color: #FB4D43;
@@ -396,15 +404,41 @@
         }
       }
 
-      &-avatar {
+      &-cover {
+        position: relative;
         width: 124px;
         height: 124px;
-        .bg;
-        // background: rgba(255, 255, 255, 1);
-        background-image: url(//net.huanmusic.com/scanbar-c/icon_shop_default.png);
-        background-color: rgba(255, 255, 255, 1);
-        border: 1px solid rgba(229, 229, 229, 1);
         border-radius: 10px;
+        border: 1px solid rgba(229, 229, 229, 1);
+        overflow: hidden;
+  
+        &-new {
+          position: absolute;
+          top: 0;
+          left: 0;
+          .bg;
+          width: 61px;
+          height: 29px;
+          background-image: url("//net.huanmusic.com/scanbar-c/icon_newshop.png");
+        }
+        &-close {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          left: 0;
+          .bg;
+          width: 100%;
+          height: 42px;
+          background-image: url("//net.huanmusic.com/scanbar-c/icon_dayang_m.png");
+        }
+  
+        &-image {
+          width: 100%;
+          height: 100%;
+          background-repeat: no-repeat;
+          background-size: 100%;
+          background-position: center center;
+        }
       }
 
       &-title {
