--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -78,38 +78,45 @@
 
     &-card {
       border-radius: 10px;
-      width: 90%;
       background-color: #fff;
       display: flex;
       flex-direction: column;
-      margin: 0 auto;
+      margin: 0 30px;
       margin-top: 22px;
       &-AtTimeline {
+        &-h5 {
+          .at-timeline-item {
+            height: 92px;
+            line-height: 92px;
+            .at-timeline-item__tail{
+              left: 10px;
+              top: 12px;
+            }
+            .at-timeline-item__icon {
+              width: 24px;
+              height: 24px;
+              top: 5px;
+              & > span {
+                font-size: 24px !important;
+                top: -30px;
+                position: relative;
+              }
+            }
+            .at-timeline-item__content {
+              margin-left: 40px;
+              .at-timeline-item__content-item {
+                font-size: 28px;
+              }
+              .at-timeline-item__content--sub {
+                font-size: 24px;
+              }
+            }
+          }
+        }
+        
         .at-timeline-item {
-          height: 92px;
-          line-height: 92px;
-          .at-timeline-item__tail{
-            left: 10px;
-            top: 12px;
-          }
           .at-timeline-item__icon {
-            width: 24px;
-            height: 24px;
-            top: 5px;
-            & > span {
-              font-size: 24px !important;
-              top: -30px;
-              position: relative;
-            }
-          }
-          .at-timeline-item__content {
-            margin-left: 40px;
-            .at-timeline-item__content-item {
-              font-size: 28px;
-            }
-            .at-timeline-item__content--sub {
-              font-size: 24px;
-            }
+            top: 7px;
           }
         }
       }
@@ -256,7 +263,7 @@
           padding: 34px 31px;
 
           &-border {
-            border-bottom: #E3E3E3 solid 1px;
+            border-bottom: solid 1px rgba(227,227,227,.5);
           }
 
           &-title {
@@ -291,20 +298,23 @@
     padding-top: 22px;
     height: 100%;
     &-input {
-      width: 90%;
       height: 350px;
       .padding(30px);
       background: rgba(247, 247, 247, 1);
-      border: 1px solid #cccccc;
+      border: 1px solid rgba(204,204,204,.5);
       border-radius: 10px;
       position: relative;
-      margin: auto;
+      margin: 30px;
       &-text {
         width: 100%;
         // height: 100%;
         height: 250px;
         background: #f7f7f7;
         border: none;
+        resize:none;
+      }
+      &-text::-webkit-input-placeholder {
+        color: #B3B3B3;
       }
 
       &-corner {
@@ -316,38 +326,35 @@
     }
 
     &-title {
-      width: 90%;
-      margin: auto;
+      margin: 15px 30px;
       font-size: 28px;
-      font-weight: 500;
       color: rgba(153, 153, 153, 1);
-      .margin(30px, tb);
     }
 
     &-buttons {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      width: 90%;
-      margin: auto;
+      margin: 5px 30px;
     }
 
     &-button {
       .padding(36px, lr);
       height: 60px;
       .flex(center, center, row);
-      border: 3px solid #cccccc;
+      border: 1px solid rgba(204,204,204,.5);
       border-radius: 20px;
       font-size: 28px;
-      font-weight: 500;
       color: #808080;
       line-height: 60px;
+      padding-top: 5px;
       .margin(20px, b);
       .margin(16px, r);
     }
 
     &-box {
-      .margin(50px, t);
+      margin-top: 50px !important;
+      margin-left: 5% !important;
     }
   }
 
@@ -392,7 +399,7 @@
     &-input {
       width: 90%;
       height: 220px;
-      border: #CCCCCC solid 1px;
+      border:solid 1px rgba(204,204,204,.5);
       background-color: #F7F7F7;
       border-radius: 10px;
       .padding(30px);
@@ -407,6 +414,10 @@
         border: none;
       }
 
+      &-text::-webkit-input-placeholder {
+        color: #B3B3B3;
+      }
+
       &-corner {
         display: flex;
         justify-content: flex-end;
@@ -417,8 +428,7 @@
     &-modal {
       display: flex;
       background-color: #f6f6f6;
-      height: 600px;
-      border-top: 1px solid #f9f9f9;
+      height: 700px;
 
       &-list {
         display: flex;
@@ -436,7 +446,7 @@
           .flex(center, space-between, row);
 
           &-border {
-            border-bottom: #E3E3E3 solid 1px;
+            border-bottom: solid 1px rgba(193,192,201,.5);
           }
 
           &-box {
@@ -457,7 +467,7 @@
 
     &-list {
       width: 100%;
-      border-top: #E3E3E3 solid 1px;
+      border-top: solid 1px rgba(227,227,227,.5);
       margin-top: 30px;
       padding-bottom: 200px;
     }
@@ -468,7 +478,7 @@
       width: 100%;
       height: 160px;
       .flex(center, space-between);
-      // border-top: #E3E3E3 solid 1px;
+      border-top: solid 1px rgba(227,227,227,.5);
       padding: 0px 30px;
       background-color: #fff;
 
@@ -530,4 +540,8 @@
 
 .layout-header {
   background-color: #fff !important;
+}
+
+.layout-header__btn-close {
+  left: 18px;
 }
