--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -11,6 +11,12 @@ page {
   width: 100%;
   height: 100%;
 
+  &-empty {
+    display: flex; 
+    flex: 1; 
+    background-color: white
+  }
+
   &-bg {
     position: absolute;
     top: 0;
@@ -47,6 +53,7 @@ page {
       display: flex;
       flex-direction: column;
       .margin(17px, t);
+      .margin(42px, b);
     }
 
     &-name {
@@ -62,6 +69,8 @@ page {
       &-get {
         background-color: transparent;
         padding: 0;
+        .margin(10px, t);
+        .margin(20px, b);
       }
     }
 
@@ -80,7 +89,9 @@ page {
 
     &-phone {
       font-size: 30px;
+      line-height: 30px;
       color: #ffffff;
+      .margin(16px, t);
     }
   }
 
@@ -89,17 +100,42 @@ page {
     width: 98%;
     z-index: 1;
 
+    &-items {
+      border-radius: 10px;
+      margin-bottom: 22px;
+      background-color: #fff;
+    }
+
+    &-border {
+      border-bottom: 1px solid rgba(227,227,227,.5);
+    }
+
     &-item {
       position: relative;
       padding: 34px 30px;
-      border-radius: 10px;
       background-color: #fff;
       width: 100%;
-      margin-bottom: 22px;
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+      
+      &-radius {
+        &-top {
+          border-top-left-radius: 10px;
+          border-top-right-radius: 10px;
+        }
+
+        &-bottom {
+          border-bottom-left-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+      }
+
+
+      &-column {
+        .flex(center, center, column);
+      }
 
       &-left {
         display: flex;
@@ -256,13 +292,14 @@ page {
       }
 
       &-item {
-        display: flex;
+        // display: flex;
         justify-content: center;
         width: 100%;
 
         &-container {
           display: flex;
           width: 690px;
+          margin: auto;
           .margin(20px, t);
           flex-direction: column;
           background-color: #fff;
