修改订单状态

--- a/src/pages/TopUp/index.less
+++ b/src/pages/TopUp/index.less
@@ -5,6 +5,18 @@
   width: 100%;
   min-height: 100%;
   background-color: #fff;
+  &-empty {
+    width: 750px;
+    height: 431px;
+    margin: auto;
+    margin-top: 156px;
+    &-text {
+      text-align: center;
+      font-size: 30px;
+      width: 100%;
+      color: #666666;
+    }
+  }
   &-error {
     background-image: url('//net.huanmusic.com/weapp/img_receiot_shibai_3.png');
     width: 750px;
