--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -310,9 +310,9 @@
         resize:none;
       }
       &-text::-webkit-input-placeholder {
-        color: #B3B3B3;
+        color: #b3b3b3;
+        background: #000;
       }
-
       &-corner {
         display: flex;
         justify-content: flex-end;
