高铁版本修改

--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -76,7 +76,7 @@
         border-radius: 40px;
         margin: auto;
         color: #fff;
-        margin-top: 100px;
+        margin: .5rem auto;
       }
     }
     &-wx {
@@ -218,7 +218,7 @@
       display: flex;
       flex-direction: column;
       background-color: #fff;
-      border-radius: 0 0 10px 10px;
+      border-radius: 10px;
       overflow: hidden;
 
       &-empty {
