--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -34,6 +34,16 @@
       .component-form {
         .at-list__item {
           padding-left: 10px !important;
+          & > div {
+            & > div {
+              & > div {
+                .component-product-stepper-touch {
+                  width: 1.2rem;
+                  height: 1.2rem;
+                }
+              }
+            }
+          }
         }
       }
 
