--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -713,7 +713,7 @@
       position: relative;
       width: 100%;
       &::after {
-        .border1px;
+        // .border1px;
         border: 'none'
       }
     }
