--- a/src/pages/index/component/index.less
+++ b/src/pages/index/component/index.less
@@ -55,15 +55,15 @@
         .margin(10px, r);
         display: block;
         white-space: nowrap;
-        margin-top: 11px;
+        // margin-top: 11px;
       }
     }
     &-box-h5 {
       position: relative;
     }
     &-box {
-      .margin(10px, t);
-      display: flex;
+      .margin(34px, t);
+      // display: flex;
     }
     &-merchant-h5 {
       padding: 20px !important;
@@ -87,11 +87,11 @@
       bottom: 0px !important;
     }
     &-search {
-      position: absolute;
+      // position: absolute;
       bottom: 30px;
       right: 23px;
       .flex(center, center, row);
-      width:300px;
+      // width:300px;
       height:54px;
       background:rgba(255,255,255, 0.2);
       border-radius:27px;
