--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -26,3 +26,167 @@
     .flex(center, center);
   }
 }
+.loginbrfore {
+  height: 100%;
+  background-color: #f2f2f2;
+    .login_containerbefore_bg{
+      width:100%;
+      height: 438px;
+      background-image: url('../../assets/bg_gaotie.png');
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      position: relative;
+    }
+    .login_content {
+        padding-top: 50px;
+        margin: auto;
+        width: 93.3%;
+        background: #ffffff;
+        border-radius: 10px;
+        padding: 50px;
+        position: relative;
+        top: -99px;
+    }
+    .login_content__item {
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #cccccc;
+        padding: 10px 0;
+        font-size: 32px;
+        height: 96px;
+        border:2px solid rgba(227,227,227,1);
+        border-radius:10px;
+        .login_content__item_txt {
+          padding: 0px 30px;
+          color: #333333;
+          font-size: 30px;
+        }
+        & > input {
+          padding: 0px 30px;
+          color: #333333;
+        }
+        .login_content__item_logo {
+          width:51px;
+          height:45px;
+          margin: 20px;
+          background-image: url('../../assets/icon_registered_phone.png');
+          background-repeat: no-repeat;
+          background-size: 100% 100%;
+        }
+    }
+    .login_content_item_title {
+      font-size: 30px;
+      font-family: Source Han Sans CN Regular, Source Han Sans CN Regular-Regular;
+      font-weight: 400;
+      color: #666666;
+      padding-bottom: 20px;
+    }
+    .login_content_item_title_padding {
+      padding-top: 43px;
+  
+    }
+    .login_content_item_tishi {
+      position: absolute;
+      width: 80%;
+      background-color: #fff;
+      z-index: 99;
+      box-shadow: 0px 6px 20px 4px rgba(63,127,252,0.15);
+      font-size: 30px;
+      height: auto;
+      max-height: 364px;
+      background: #ffffff;
+      border: 1px solid #e3e3e3;
+      border-radius: 10px;
+      box-shadow: 5px 9px 24px 23px rgba(111,111,111,0.14); 
+      overflow: auto;
+      &_item {
+        padding: 10px 20px;
+        // border-bottom: 2px solid #e3e3e3;
+        color: #333333;
+      }
+    }
+    .login_content_item_code {
+      display: flex;
+      align-items: center;
+      padding-bottom: 0px;
+      font-size: 32px;
+      height: 96px;
+    
+      .login_content_item_code_i {
+        border-bottom: 1px solid #cccccc;
+        display: flex;
+        align-items: center;    
+        font-size: 32px;
+        height: 96px;
+        border:2px solid rgba(227,227,227,1);
+        border-radius:10px;
+        width: 100%;
+        & > input {
+          padding: 0px 30px;
+          color: #333333;
+          font-size: 30px;
+        }
+        .login_content_item_code_i_logo {
+          width:51px;
+          height:45px;
+          margin: 23px;
+          background-image: url('../../assets/icon_registered_code.png');
+          background-repeat: no-repeat;
+          background-size: 100% 100%;
+        }
+      }
+    }
+    .login_content__input {
+        width: 100%;
+        font-size: 30px;
+    }
+    .login_content__code {
+      text-align: center;
+      width: 33%;
+      height:90px;
+      border:3px solid rgba(42,134,252,1);
+      border-radius:15px;
+      line-height: 90px;
+      font-size:26px;
+      font-family:PingFang SC;
+      font-weight:500;
+      color:rgba(42,134,252,1);
+      margin-top: 30px;
+      margin-left: 2%;
+    }
+  
+    .login_content__code_wait {
+      color:#cccccc;
+      border:3px solid rgba(227,227,227,1);
+      border-radius:15px;
+    }
+    .login_content__btn_true {
+      margin-top: 80px;
+      border-radius: 44px;
+      color: #ffffff;
+      background-color: @theme-color;
+      border: none;
+      height: 80px;
+      line-height: 80px;
+      font-size: 30px;
+    }
+    .login_content__btn_false {
+      margin-top: 80px;
+      border-radius: 44px;
+      color: #ffffff;
+      background-color: @theme-false-color;
+      border: none;
+      height: 80px;
+      line-height: 80px;
+      font-size: 30px;
+    }
+    .login_content__info {
+      margin: 50px 0 100px 0;
+      font-size:24px;
+      font-family:PingFang SC;
+      font-weight:500;
+      color:rgba(153,153,153,1);
+      line-height:32px;
+    }
+  
+}
