--- a/src/pages/TopUp/index.less
+++ b/src/pages/TopUp/index.less
@@ -1,6 +1,8 @@
 @import "../../styles/theme.less";
 @blockchain-bd-prefix: jxc-h5-top;
 @blockchain-bd-change: jxc-h5-change;
+@blockchain-change: jxc-change;
+
 .@{blockchain-bd-prefix} {
   width: 100%;
   min-height: 100%;
@@ -292,6 +294,128 @@
           line-height: 80px;
           padding-left: 9px;
           margin-top: -30px;
+        }
+      }
+    }
+  }
+}
+.@{blockchain-change} {
+  width: 100%;
+  min-height: 100%;
+  background-color: #EEEEED;
+  overflow-y: auto;
+  height: 100%;
+  &-bg {
+    width: 100%;
+    height: 340px;
+    background: linear-gradient(180deg,#2a86fc, #30bfff);
+    color: #fff;
+    display: flex;
+    position: relative;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    &-title {
+      text-align: center;
+      position: absolute;
+      width: 100%;
+      &-img {
+        width: 100px;
+        height: 100px;
+        margin-top: 31px;
+      }
+      &-name {
+        font-size: 24px;
+        font-family:Source Han Sans CN;
+        font-weight:400;
+        color:rgba(255,255,255,1);
+      }
+      &-money {
+        font-size: 60px;
+        font-family:Source Han Sans CN;
+        font-weight:bold;
+        color:rgba(255,255,255,1);
+        margin-left: -1.5vw;
+      
+      }
+    }
+    &-logo {
+      position: absolute;
+      right: 0px;
+      bottom: 0px;
+      width: 205px;
+      height: 54px;
+      &-img {
+        width: 205px;
+        height: 54px;
+      }
+    }
+   
+  }
+  &-content {
+    width: 90%;
+    background: #ffffff;
+    border-radius: 10px;
+    margin: auto;
+    position: relative;
+    top: -40px;
+    padding: 50px 0px;
+    &-title{
+      font-family:Source Han Sans CN;
+      font-weight:bold;
+      height: 100px;
+      line-height: 100px;
+      color:rgba(42,134,252,1);
+      padding-top: 10px;
+      display: -webkit-inline-box;
+      &-icon {
+        width: 18px;
+        height: 18px;
+        margin: 30px;
+        margin-right: 20px;
+        z-index: 999;
+        margin-top: 0;
+      }
+      &-message {
+        height: 85px;
+        line-height: 80px;
+        width: 100%;
+        display: -webkit-box;
+        border-left: 1px solid #e3e3e3;
+        position: relative;
+        left: -30px;
+        padding-left: 30px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+       
+        &-img{
+          width: 60px;
+          height: 60px;
+          margin: 10px;
+          margin-top: -60px;
+          margin-bottom: 30px;
+        }
+        &-time {
+          font-size: 22px;
+          font-family: Source Han Sans CN Regular, Source Han Sans CN Regular-Regular;
+          font-weight: 400;
+          color: #999999;
+          height: 80px;
+          line-height: 80px;
+          padding-left: 24px;
+          margin-top: -50px;
+        }
+        &-money {
+          font-size: 36px;
+          font-family: Source Han Sans CN Bold, Source Han Sans CN Bold-Bold;
+          font-weight: 700;
+          color: #2a86fc;
+          height: 80px;
+          line-height: 80px;
+          padding-left: 9px;
+          margin-top: -50px;
+          &-red {
+            color:#FC4E44;
+          }
         }
       }
     }
