--- a/src/component/tabs/tabs.switch.less
+++ b/src/component/tabs/tabs.switch.less
@@ -23,7 +23,7 @@
       .flex(center, center, row);
       width: 36px;
       height: 36px;
-      padding-top: 5px;
+      // padding-top: 5px;
       text-align: center;
       background-color: #FC4E44;
       border-radius: 18px;
