--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -309,7 +309,7 @@
       width: 150px;
       height: 150px;
       border-radius: 10px;
-      border: #E3E3E3 solid 1px;
+      border: #E3E3E3 solid 2px;
     }
 
     &-detail {
@@ -339,7 +339,7 @@
 
         &-integer {
           font-size: 30px;
-          line-height: 30x;
+          line-height: 30px;
         }
       }
 
@@ -353,7 +353,7 @@
     &-stepper {
       position: absolute;
       right: 15px;
-      bottom: 0;
+      bottom: .42rem;
 
       &-empty {
         .flex(center, center);
