--- a/src/pages/product/component/index.less
+++ b/src/pages/product/component/index.less
@@ -65,6 +65,9 @@
       .act-item(#FC4E44);
       .margin(23px, t);
       border: 2px #FC4E44 solid;
+      height: .74rem;
+      line-height: .74rem;
+      padding-top: .15rem
     }
 
     &-price {
@@ -118,6 +121,8 @@
         .act-item-bg(#FC4E44, rgba(255,235,235,1));
         .margin(14px, r);
         font-size: 20px;
+        height: .74rem;
+        line-height: .74rem;
       }
       &-bor {
         .margin(16px, b);
