--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -115,7 +115,7 @@ page {
         &-title {
           color: #333333;
           font-size: 30px;
-          margin-left: 16px;
+          // margin-left: 16px;
         }
       }
 
@@ -169,12 +169,13 @@ page {
 
       &-pop {
         position: absolute;
-        top: 10px;
-        right: 10%;
+        top: 5px;
+        right: 14%;
         transform: translate(50%, 0);
         margin-left: 10px;
         min-width: 108px;
         padding: 0 5px;
+        padding-bottom: .05rem;
         white-space: nowrap;
         height: 28px;
         background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_prompt.png);
@@ -213,12 +214,12 @@ page {
       margin: 25px 0px 5px 0px;
     }
     &-bannerEmptyH5 {
-      width: 90%;
+      width: 93.3%;
       height: 177px;
       margin: 25px 0px 5px 0px;
     }
     &-bannerH5 {
-      width: 90%;
+      width: 93.3%;
       height: 212px;
       margin: 25px 0px 5px 0px;
     }
@@ -327,7 +328,7 @@ page {
     &-user-member {
       position: absolute;
       left: calc(~'100% + 10px');
-      top: -10px;
+      top: -5px;
       height: 32px;
       display: flex;
       flex-direction: row;
