--- a/src/component/address/index.less
+++ b/src/component/address/index.less
@@ -70,7 +70,7 @@
       font-size:30px;
       font-weight:500;
       color:rgba(51,51,51,1);
-      width: 100%;
+      width: 90%;
       .clamp(2);
       .flex(flex-start, flex-start, row);
     }
@@ -102,7 +102,9 @@
       .margin(10px, r);
       .margin(4px, t);
       white-space: nowrap;
-      padding-top: 6px;
+      padding-top: 2px;
+      margin-top: 6px;
+      white-space: nowrap;
       &-1 {
         background:#E1EEFF;
         color:#2A86FC
@@ -243,6 +245,8 @@
         border:2px solid rgba(204,204,204,1);
         border-radius:10px;
         height: 50px !important;
+        line-height: 50px !important;
+        padding-top: 14px;
         font-size:26px;
         font-weight:500;
         color:rgba(153,153,153,1);
