--- a/src/component/coupon/index.less
+++ b/src/component/coupon/index.less
@@ -178,7 +178,7 @@
   &-item {
     margin: auto;
     margin-top: 20px;
-    width: 90%;
+    width: 93.3%;
     &-text-grey {
       color: #CCCCCC !important;
     }
@@ -199,7 +199,8 @@
       border-radius: 10px;
       background-size: 100% 100%;
       &-grey {
-        background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_grey.png);
+        // background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_grey.png);
+        background-image: url(../../assets/bg_coupon_grey_expand.png);
         background-size: 100% 100%;
         border-radius: 10px;
       }
@@ -210,8 +211,8 @@
         color: #fff;
         width: 35%;
         &-price {
-          font-size: 80px;
-          line-height: 80px;
+          font-size: 72px;
+          line-height: 72px;
           font-weight: bold;
           position: relative;
           width: 80%;
@@ -258,12 +259,14 @@
           font-size: 30px;
           line-height: 30px;
           color: #333333;
+          padding-top: .3rem;
         }
 
         &-time {
           font-size: 22px;
           line-height: 22px;
           color: #666666;
+      
         }
 
         &-pop {
@@ -324,8 +327,7 @@
       z-index: 1;
       width: 100%;
       margin: auto;
-      padding: 46px 27px 33px 27px;
-      margin-top: -19px;
+      padding: 27px 27px 33px 27px;
       border-radius: 10px;
       .flex(flex-start, center, column);
       background-color: #fff;
@@ -337,6 +339,7 @@
           width: 22px;
           height: 22px;
           margin-right: 8px;
+          margin-bottom: 5px;
         }
       }
 
