--- a/src/component/login/modal.less
+++ b/src/component/login/modal.less
@@ -8,16 +8,36 @@
     justify-self: center;
     align-self: center;
   }
-
+  &-modal-h5 {
+    justify-self: center;
+    align-self: center;
+    & > div {
+      & > div {
+        min-height: 0px;
+        padding: 32px 24px;
+      }
+    }
+  }
   &-content {
+    .flex(center, center, column);
+    height: 80px;
+    min-height: 0px;
+    font-size: 30px;
+    color: #666666;
+  }
+  &-content-h5 {
     .flex(center, center, column);
     height: 100px;
     font-size: 30px;
     color: #666666;
+    background-color: #fff
   }
-
   &-buttons {
     .flex(center, center, row);
+  }
+  &-buttons-h5 {
+    .flex(center, center, row);
+    background-color: #fff
   }
 
   &-button {
@@ -30,6 +50,7 @@
     background-color: #999999;
     color: #fff;
     .flex(center, center, row);
+    border-color: transparent;
   }
 
   &-blue {
