生产版本、修改首页分享、支付跳转、ui调试

--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -399,7 +399,7 @@
 
     &-input {
       height: 220px;
-      margin: 0px 30px;
+      margin: 30px;
       border: #CCCCCC solid 2px;
       background-color: #F7F7F7;
       border-radius: 10px;
