删除模块【余额支付、优惠券、积分、个人二维码、退货、取消订单、自提】

--- a/src/pages/index/component/index.less
+++ b/src/pages/index/component/index.less
@@ -7,7 +7,7 @@
 .@{prefix} {
   &-address-h5 {
     height: 160px !important;
-    .background-image('//net.huanmusic.com/scanbar-c/v2/bg_home_shang.png') !important;
+    .background-image('https://net.huanmusic.com/scanbar-c/v2/bg_home_shang.png') !important;
     background-size: 100% 101% !important;
   }
   &-address {
@@ -17,7 +17,7 @@
     padding-bottom: 10px;
     position: relative;
     .bg;
-    background-image: url('//net.huanmusic.com/scanbar-c/v2/bg_home_shang.png');
+    background-image: url('https://net.huanmusic.com/scanbar-c/v2/bg_home_shang.png');
     background-size: 100% 101% !important;
     display: flex;
     flex-direction: column;
