--- a/src/pages/product/index.less
+++ b/src/pages/product/index.less
@@ -64,7 +64,7 @@
           width: 27px;
           height: 26px;
           .bg;
-          background-image: url(//net.huanmusic.com/scanbar-c/icon_del_1.png);
+          background-image: url(https://net.huanmusic.com/scanbar-c/icon_del_1.png);
         }
       }
     }
@@ -79,7 +79,7 @@
     background: rgba(245, 245, 245, 1);
     border-radius: 50%;
     .bg;
-    background-image: url(//net.huanmusic.com/scanbar-c/v1/icon_search_cart1.png);
+    background-image: url(https://net.huanmusic.com/scanbar-c/v1/icon_search_cart1.png);
     background-size: 100%;
 
     &-bge {
@@ -113,7 +113,7 @@
       .flex(center, center, row);
 
       &-img {
-        background-image: url('//net.huanmusic.com/scanbar-c/v1/icon_empty.png');
+        background-image: url('https://net.huanmusic.com/scanbar-c/v1/icon_empty.png');
         width: 23px;
         height: 25px;
         background-size: 100% 100%;
