修改云店h5版本bug、需求

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -12,7 +12,7 @@
     overflow: hidden;
   }
   &-wrap {
-    margin: 22px 30px 0px !important;
+    margin: 22px 30px 0px;
   }
   &-buttons {
     .flex(center, center);
