--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -86,7 +86,23 @@
       flex-direction: column;
       margin: 0 30px;
       margin-top: 22px;
-      width: 93.3% !important;
+      // width: 93.3% !important;
+      &-numT {
+        font-size: 26px;
+        color: #666666;
+        text-align: center;
+        padding-right: 5px;
+      }
+      &-num {
+        font-size: 40px;
+        color: #333333;
+        padding-left: 5px;
+      }
+      &-code {
+        width: 100%;
+        height: 512px;
+        text-align: center;
+      }
       &-AtTimeline {
         .at-timeline-item {
           height: 92px;
